k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-playground
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  rules:
    - host: yarp.gateway-playground.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-yarp
                port:
                  name: http
    - host: ocelot.gateway-playground.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-ocelot
                port:
                  name: http
    - host: monolith.gateway-playground.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monolith
                port:
                  name: http
    - host: keycloak.gateway-playground.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
